--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@
 NEXT_PUBLIC_UTTERANCES_REPO=daqnext/meson-blog
 # NEXT_PUBLIC_DISQUS_SHORTNAME=
 
-MAILCHIMP_API_KEY=c19ad0fcdcfb3d88ffe1061581f9efb9-us20
-MAILCHIMP_API_SERVER=us20
-MAILCHIMP_AUDIENCE_ID=d091a8f037
+# MAILCHIMP_API_KEY=
+# MAILCHIMP_API_SERVER=
+# MAILCHIMP_AUDIENCE_ID=
 
 # BUTTONDOWN_API_URL=https://api.buttondown.email/v1/
 # BUTTONDOWN_API_KEY=
